[CMF] Change properties for hide Gen AI API Key
description : Change properties for hide Gen AI API Key. Need application-local.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=checkMyFortune
+spring.ai.google.genai.api-key=${API_KEY}
+spring.ai.google.genai.chat.options.temperature=0.0
+spring.ai.google.genai.chat.options.model=gemini-2.5-flash
