[CMF] Add options at properties file
description : Add spring.profiles.active

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=checkMyFortune
+spring.profiles.active=local
+
 spring.ai.google.genai.api-key=${API_KEY}
 spring.ai.google.genai.chat.options.temperature=0.0
 spring.ai.google.genai.chat.options.model=gemini-2.5-flash
